[gd_scene load_steps=2 format=3 uid="uid://cqumuvwa83uj6"]

[ext_resource type="Script" uid="uid://cty3igweawyet" path="res://addons/quest_weaver/ui/node_properties/event_node_editor.gd" id="1_6a2ip"]

[node name="EventNodeEditor" type="VBoxContainer"]
offset_right = 127.0
offset_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6a2ip")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="EventLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Event: "

[node name="SignalNameEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Payload: "

[node name="PayloadEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "(example)
{
  \"door_id\": \"special_door\",
  \"key_id\": \"special_key\"
}"
